--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ bin/
 biocryptokeydb/
 derby.log
 
+# ignore References directory and subdirectories
+Referências/
+
 # ignore all Eclipse project related files
 .classpath
 .metadata
